fix more alignment

--- a/dev/infinitv-sections.css
+++ b/dev/infinitv-sections.css
@@ -179,6 +179,7 @@
 
 
 /* ItemsContainer */
+
 .layout-tv .detailPagePrimaryContainer .itemsContainer.vertical-wrap {
     padding-left: 2%;
     padding-top: 1.5em;
@@ -192,8 +193,16 @@
 .layout-tv #listChildrenCollapsible .itemsContainer {
     padding-bottom: 0em;
 }
-.layout-tv #tvRecommendedPage .itemsContainer {
+
+
+.layout-tv #suggestionsTab .itemsContainer {
     padding: .5em .5em .5em 1em;
+}
+
+.layout-tv #genresTab .itemsContainer {
+    padding-bottom: 0;
+    padding-left: 1em;
+    margin: 0em 1em 0em 0em;
 }
 
 
